Prevent menu darken from preventing pointer events on IE.

--- a/static/css/components/_pre-content.scss
+++ b/static/css/components/_pre-content.scss
@@ -15,7 +15,7 @@
 }
 
 .panel {
-  flex-grow: 1;
+  flex: 1 0 33%;
   margin: units(1) 0;
 
   @include media-medium() {
